Bug 395426, Contextmenu opened using keyboard should have .button == 0, r=enndeakin,sr+a=jst